# qtbrew

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
qml/: BrewStepDelegate.qml  BrewSteps.qml  BrewStepsPane.qml  CurrentStepPane.qml  DashboardPane.qml  Kettle.qml  NavButton.qml  NavigationPane.qml  PageStack.qml  ProcessView.qml  PumpPanel.qml  RecipePane.qml  SetPoint.qml  SetPointDialog.qml  StepStat.qml  Units.qml  main.qml
src/: brewingcontroller.cpp  brewingcontroller.h  brewsession.cpp  brewsession.h  brewstep.cpp  brewstep.h  pid.cpp  pid.h  relay.cpp  relay.h  tempsensor.cpp  tempsensor.h
ui/: setpointgraph.cpp  setpointgraph.h  uicontroller.cpp  uicontroller.h
